## Version: $Id$
##
######################################################################
##
### Commentary:
##
######################################################################
##
### Change Log:
##
######################################################################
##
### Code:

install(FILES dtkTest   DESTINATION include/dtkTest)
install(FILES dtkTest.h DESTINATION include/dtkTest)

######################################################################
### CMakeLists.txt ends here
